Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -197,7 +197,7 @@ footer p {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 680px;
+  width: 70%;
 }
 
 .widget.extendednavigation a.pull {
@@ -206,23 +206,19 @@ footer p {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
 
-.widget.extendednavigation ul.align-center li
-{
+.widget.extendednavigation ul.align-center li {
   text-align: center;
 }
 
-.widget.extendednavigation ul.align-left li
-{
+.widget.extendednavigation ul.align-left li {
   text-align: left;
 }
 
-.widget.extendednavigation ul.align-right li
-{
+.widget.extendednavigation ul.align-right li {
   text-align: right;
 }
 
